<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDonasi"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="DONASI PESAWAT R80"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/r80"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginEnd="@dimen/horizontal_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/vertical_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginLeft="@dimen/horizontal_layout">


            <EditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_layout"
                android:hint="@string/nama"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_layout"
                android:inputType="textEmailAddress"
                android:hint="@string/email_user"/>

            <EditText
                android:id="@+id/et_total_donasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_layout"
                android:inputType="number"
                android:hint="@string/total_donasi_user"/>

            <EditText
                android:id="@+id/et_catatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_layout"
                android:lines="3"
                android:hint="@string/catatan_user"/>

            <Button
                android:id="@+id/btn_kirim_donasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="lanjut"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>