<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/r80"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="@dimen/horizontal_layout"
                android:layout_marginLeft="@dimen/horizontal_layout"
                android:layout_marginBottom="@dimen/vertical_layout"
                android:background="#4D000000"
                android:text="Pesawat R80"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_flight_white_24dp"
                android:drawablePadding="4dp"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="B.J. Habibie"
            android:textSize="32sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="Presiden Ke 3 Indonesia"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="@string/content_text"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/vertical_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginRight="@dimen/horizontal_layout"/>

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/horizontal_layout"
                    android:text="TTL"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TTL"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/horizontal_layout"
                    android:text="Jabatan"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jabatan"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/horizontal_layout"
                    android:text="Penemuan"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/penemuan"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginBottom="8dp"
            android:text="@string/donasi"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginLeft="@dimen/horizontal_layout">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/r80"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/logo"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/horizontal_layout"
                android:layout_marginEnd="@dimen/horizontal_layout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/r80"
                android:text="@string/ajakan"
                android:layout_toRightOf="@id/r80"
                android:textColor="@color/black"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btnDonasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_donasi"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout"/>

    </LinearLayout>

</ScrollView>